k8s/ingress/loadbal-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: we
  name: nginx-ingress-lb
  labels:
    app: nginx-ingress-lb
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 35.197.3.183
  ports:
  - port: 80
    name: http
    targetPort: 80
  - port: 443
    name: https
    targetPort: 443
  selector:
    app: che
