k8s/ingress/loadbalancer-nginx.yaml
apiVersion: v1
kind: Service
metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  namespace: we
  name: nginx-ingress-lb
  labels:
    app: nginx-ingress-lb
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  loadBalancerIP: 35.197.3.183
  ports:
  - port: 80
    name: http
    targetPort: 8080
  - port: 443
    name: https
    targetPort: 8443
  selector:
    group: che-group
